<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mc_share_domain_url">http://sdk.mobcent.com/</string>
    <string name="mc_share_domain_image_url">http://img.mobcent.com/</string>
    <string name="mc_share_app_name">MobCentShareLib</string>
    <string name="mc_share_power_by">Powered by MobCent</string>
    <string name="mc_share_pls_wait">Please wait...</string>
    <string name="mc_share_say_something">Say something...</string>
    <string name="mc_share_back">Back</string>
    <string name="mc_share_finish">Close</string>
    <string name="mc_share_publish_button">Share</string>
    <string name="mc_share_mobcent_share">MobCent Share</string>
    <string name="mc_share_words_left">{0} words</string>
    <string name="mc_share_publish_words_tip">Please input no greater than {0} words</string>
    <string name="mc_share_tips">Tip</string>
    <string name="mc_share_ok">OK</string>
    <string name="mc_share_confirm">Confirm</string>
    <string name="mc_share_cancel">Cancel</string>
    <string name="mc_share_sharing">Sharing your information...</string>
    <string name="mc_share_share_succ">Shared successfully!</string>
    <string name="mc_share_no_site_bind">"You have not bound any site for your sharing. Click the 'Bind more' button please."</string>
    <string name="mc_share_share_fail">Share failed, please try again!</string>
    <string name="mc_share_send_share">Send</string>
    <string name="mc_share_site_to_share">Select sites to share</string>
    <string name="mc_share_select_at_least_one">Please select at least one site.</string>
    <string name="mc_share_refresh_web">Refresh</string>
    <string name="mc_share_send_by_sms">SMS</string>
    <string name="mc_share_send_by_mail">Email</string>
    <string name="mc_share_send_by_web">Web</string>
    <string name="mc_share_content_addr">Addr:</string>
    <string name="mc_share_content_from">From:</string>
    <string name="mc_share_by_lan">By Language</string>
    <string name="mc_share_bind">Bind</string>
    <string name="mc_share_unbind">Unbind</string>
    <string name="mc_share_bind_succ">Bind successfully!</string>
    <string name="mc_share_bind_fail">Bind failed, please try again!</string>
    <string name="mc_share_unbind_tips">Are you sure that you want to unbind this site?</string>
    <string name="mc_share_unbind_succ">Unbind successfully!</string>
    <string name="mc_share_unbind_fail">Unbind fail!</string>
    <string name="mc_share_sync_bind_sites">Updating your sync sites...</string>
    <string name="mc_share_image_empty">Your shared picture is not existed.</string>
    <string name="mc_share_input_topic">Topic</string>
    <string name="mc_share_long_unbind">long click to unbind</string>
    <string name="mc_share_input_some_one">input name</string>
    <string name="mc_share_sync_set">setting</string>
    <string name="mc_share_bind_at_least_one">Please bind at least one site.</string>
    <string name="app_name">Phong Vân Truyền Kỳ</string>
    <string name="wait_info">Chào mừng bạn đến trò chơi......</string>
</resources>
