<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/mc_share_white" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/mc_share_to_topbar_bg" android:layout_width="match_parent" android:layout_height="45.0dp">
            <RelativeLayout android:id="@id/mcShareTopBar" android:layout_width="match_parent" android:layout_height="45.0dp">
                <Button android:textColor="@color/mc_share_black" android:gravity="left|center" android:id="@id/mcShareBackBtn" android:background="@drawable/mc_share_to_new_button_back" android:paddingLeft="23.0dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10.0dp" android:layout_marginTop="5.0dp" android:layout_marginBottom="5.0dp" android:text="@string/mc_share_back" android:layout_alignParentLeft="true" />
                <TextView android:textSize="18.0dp" android:textColor="@color/mc_share_title_color" android:gravity="center" android:id="@id/mcSharePubTitle" android:layout_width="match_parent" android:layout_height="45.0dp" android:text="@string/mc_share_mobcent_share" />
                <LinearLayout android:orientation="horizontal" android:id="@id/mcShareBtnLayout1" android:background="@drawable/mc_share_to_new_button_share_n" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="5.0dp" android:layout_marginRight="10.0dp" android:layout_marginBottom="5.0dp" android:layout_alignParentRight="true">
                    <ImageView android:layout_gravity="center_vertical" android:id="@id/mcShareExpandImage" android:paddingLeft="5.0dp" android:paddingRight="5.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/mc_share_to_new_button_share_arrow1" />
                    <ImageView android:background="@drawable/mc_share_to_new_button_share_line" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="3.0dp" android:layout_marginBottom="3.0dp" />
                    <Button android:textColor="@color/mc_share_black" android:layout_gravity="center_vertical" android:id="@id/mcSharePublishBtn" android:background="@drawable/mc_share_button_bar_publish" android:paddingLeft="10.0dp" android:paddingRight="10.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mc_share_publish_button" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/mcShareBtnLayout2" android:background="@drawable/mc_share_to_new_button_share_n" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="5.0dp" android:layout_marginRight="10.0dp" android:layout_marginBottom="5.0dp" android:layout_alignParentRight="true" android:layout_centerVertical="true">
                    <ImageView android:layout_gravity="center_vertical" android:id="@id/mcShareHideImage" android:paddingLeft="5.0dp" android:paddingRight="5.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/mc_share_to_new_button_share_arrow2" />
                    <ImageView android:background="@drawable/mc_share_to_new_button_share_line" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="3.0dp" android:layout_marginBottom="3.0dp" />
                    <Button android:textColor="@color/mc_share_black" android:layout_gravity="center_vertical" android:id="@id/mcShareSmsBtn" android:background="@drawable/mc_share_button_bar_publish" android:paddingLeft="5.0dp" android:paddingRight="5.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mc_share_send_by_sms" />
                    <ImageView android:background="@drawable/mc_share_to_new_button_share_line" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="3.0dp" android:layout_marginBottom="3.0dp" />
                    <Button android:textColor="@color/mc_share_black" android:layout_gravity="center_vertical" android:id="@id/mcShareMailBtn" android:background="@drawable/mc_share_button_bar_publish" android:paddingLeft="5.0dp" android:paddingRight="5.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mc_share_send_by_mail" />
                    <ImageView android:background="@drawable/mc_share_to_new_button_share_line" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="3.0dp" android:layout_marginBottom="3.0dp" />
                    <Button android:textColor="@color/mc_share_black" android:layout_gravity="center_vertical" android:id="@id/mcShareWebBtn" android:background="@drawable/mc_share_button_bar_publish" android:paddingLeft="5.0dp" android:paddingRight="5.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mc_share_send_by_web" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout android:background="@drawable/mc_share_to_new_inputbox" android:layout_width="match_parent" android:layout_height="200.0dp" android:layout_margin="10.0dp">
            <EditText android:textSize="16.0sp" android:gravity="top" android:id="@id/mcShareContentEditText" android:background="@color/mc_share_transparent" android:paddingLeft="5.0dp" android:paddingTop="5.0dp" android:paddingRight="5.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="5.0dp" android:layout_marginBottom="30.0dp" android:hint="@string/mc_share_say_something" android:lineSpacingMultiplier="1.2" />
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dp" android:layout_alignParentBottom="true">
                <TextView android:gravity="right" android:id="@id/mcShareWordsUpperLimit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="1.0dp" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
                <Button android:layout_gravity="center_vertical" android:id="@id/mcShareToBtn" android:background="@drawable/mc_share_to_new_button_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" />
                <Button android:layout_gravity="center_vertical" android:id="@id/mcShareToTopicBtn" android:background="@drawable/mc_share_to_new_button_2" android:paddingLeft="10.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageView android:id="@id/mcShareImageView" android:paddingLeft="5.0dp" android:paddingTop="5.0dp" android:paddingRight="10.0dp" android:paddingBottom="10.0dp" android:layout_width="70.0dp" android:layout_height="70.0dp" android:layout_alignParentBottom="true" />
            <ImageView android:id="@id/mcShareImageViewBox" android:background="@drawable/mc_share_to_new_pic" android:layout_width="70.0dp" android:layout_height="70.0dp" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:background="@color/mc_share_white" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10.0dp" android:layout_marginRight="10.0dp" android:layout_marginBottom="10.0dp">
            <RelativeLayout android:id="@id/mcShareToShareBox2" android:background="@drawable/mc_share_to_new_share_box_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dp">
                <GridView android:gravity="center" android:id="@id/mcShareSitesGridView" android:paddingLeft="9.0dp" android:paddingRight="9.0dp" android:paddingBottom="9.0dp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:stretchMode="columnWidth" android:columnWidth="60.0dp" android:numColumns="4" />
                <RelativeLayout android:id="@id/mcShareLoadingBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
                    <com.mobcent.share.android.widget.MCShareProgressBar android:id="@id/mcShareProgressBar" android:background="@drawable/mc_share_small_loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
                </RelativeLayout>
            </RelativeLayout>
            <TextView android:textSize="14.0sp" android:textColor="@color/mc_share_black" android:background="@color/mc_share_white" android:paddingLeft="5.0dp" android:paddingRight="5.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:text="@string/mc_share_site_to_share" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        </RelativeLayout>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/mc_share_power_by" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="@style/mc_share_power_by_style" />
</RelativeLayout>
